# api-myhome/src/routes/listing.routes.js
@@ -33,6 +33,9 @@ router.get(
 //Obtener listing por id
 router.get("/:id", ListingController.getListingById);
 
+//Obtener listing por realtor
+router.get("/realtor/:id", ListingController.getListingsByRealtorId);
+
 //Actualizar listing
 router.put("/", ListingController.updateListing);
 
